--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ img {
 }
 
 
+/* MOB HEADER */
 
 
 .mob-menu {
@@ -139,12 +140,14 @@ img {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.address-mob{
+    font-style: normal;
+}
 .mob-menu-address{
     display: flex;
     margin-bottom: 48px;
     gap: 24px;
     flex-direction: column;
-    
 }
 
 .mob-address-link{
@@ -159,8 +162,8 @@ img {
 color: #4D5AE5;
 }
 
-.mob-menu-item{
-    gap: 40px;
+.mob-menu-item:not(:last-child){
+    margin-bottom: 40px;
 }
 
 .mob-nav-link {
@@ -273,7 +276,6 @@ color: #4D5AE5;
     min-width: 169px;
     padding: 16px 32px 16px 32px;
     margin: 0 auto;
-    margin-top: 48px;
     border-radius: 4px;
     gap: 10px;
     display: block;
@@ -340,7 +342,6 @@ color: #4D5AE5;
 
 .section-three {
     display: flex;
-    max-width: 100%;
     padding-top: 96px;
     padding-bottom: 96px;
     background-color: #F4F4FD;
@@ -433,7 +434,6 @@ color: #4D5AE5;
 
 
 .section-portfolio {
-    display: flex;
     padding-top: 100px;
     padding-bottom: 92px;
 }
@@ -883,12 +883,17 @@ fill: #F4F4FD;
     margin-right: 8px;
 }
 
+
 .link-policy{
+    padding-left: 24px;
     line-height: 1.3;
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #4d5ae5;
 }
+
+
+
 
 .send-butn{
 display: block;
@@ -1117,6 +1122,10 @@ background-color: #404BBF;
     padding: 72px 24px 24px 24px;
 }
 
+.link-policy{
+    padding-left: 0px;
+}
+
 }
 
 
@@ -1154,6 +1163,10 @@ background-color: #404BBF;
     .section-one{
         padding: 188px 0;
         max-width: 1440px;
+    }
+
+    .title{
+        margin-bottom: 48px;
     }
     
     .section-one{
@@ -1267,8 +1280,6 @@ background-color: #404BBF;
 
 
     .footer {
-        max-width: 100%;
-        height: 312px;
         padding: 100px 0;
     }
     
@@ -1283,26 +1294,23 @@ background-color: #404BBF;
 
 .footer-media{
     margin-right: 80px;
+    margin-bottom: 0;
 }
 .footer-content{
     margin-right: 120px;
     margin-bottom: 0;
 }
 
+
     .form-footer {
         display: flex;
         flex-direction: column;
-        width: 453px;
-        height: 80px;
     }
 
-    .footer-text {
-        max-width: 264px;
-    }
+
 
     .footer-form {
         display: flex;
-        margin-right: 24px;
     }
 
     .button-svg {
